--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,11 +5,14 @@
   align-items: center;
   min-height: 100vh;
   padding: 4rem 0;
+  background-color: black;
 }
 
 .title {
   line-height: 1.15;
   font-size: 4rem;
+  color: white;
+  font-size: 1.2rem;
 }
 
 .title a {
